[package]
name = "spotify-import"
version = "0.1.0"
authors = ["Serhii Chushyn <chushin.sergey@gmail.com>"]
description = "Simple program to import your local music library to Spotify"
repository = "https://github.com/qarux/spotify-import"
license = "Apache-2.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
rspotify = { version = "0.11.5", features = ["cli"] }
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"]}
walkdir = "2.3.2"
lofty = "0.6.1"

log = "0.4.16"
env_logger = "0.9.0"
